* Add escape and default attributes to custom_field tag
* fix image-upload for outdated gdlib-installations (wet)
* fix label attribute breadcrumb function (richard)
* add if_author, if_article_author (with attribute 'name') (mary)
* allow multiple sections for if_article_section (like for if_section, if_category) (mary)
* display link category's title, rather than name, in the links page. (mary)

Changes since 4.0.2:

* fixed 2 potential security holes(detected in internal code review).
  Updade is recommended. 
* Textile i18n improvements
* Add a bulk Ban function for comments
* Automatically hide comments when banning an IP
* Fix comments "page by"
* Fix double translated linebreaks in comments.
* Fix nofollow in comments
* Fix preview without textile in certain edge cases
* Seperate hidden comments into unmoderated and spam
* Add bulk changing of comment status (visible, moderated, spam)
* Better error-handling in comments-form when critical fields are missing
  New tag: <txp:comments_error /> (and conditional <txp:if_comments_error >)
  Style-able error-message and form-elements via CSS (class=comments_warn).
* Plugin-Authors: Add callbacks for future spam-plugins [comment.save, comment.form]
* Plugin-Authors: Add getComment() and comment_evaluator for future spam-plugins
* Plugin-Authors: Allow (optionally, transparently) for installing compressed plugins.
* Plugin-Authors: Add window events using addEvent, to allow multiple events loading 
                  at window.onload, useful for admin side plugins.
* Improve mysql5-compatibility
* Add comment edit link to notification emails
* Make comment-time format customizable in tag (mary)
* Add offset-attribute to file_download_list (mary)
* Make older, newer and link_to_home work more consistantly with other nav-tags (mary)
* Fix mailto: links
* Fix tag trace output for enclosing tags
* Update comment_count after import